--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,6 +3,6 @@
 >
   <hr class="opacity-50" />
   <a href="https://treelink.app" class="block py-4 no-underline"
-    >Built with Astro Link 🔗</a
+    >© 2026 Hack Club. 501(c)(3) nonprofit (EIN: 81-2908499)</a
   >
 </footer>
